--- a/styles/style.css
+++ b/styles/style.css
@@ -1,13 +1,17 @@
-.errors {
-    height: 20px;
-    color: red;
-}
-
 button {
     margin: 0;
     font-family: inherit;
     font-size: inherit;
     line-height: inherit;
+}
+
+textarea {
+    resize: none;
+}
+
+.errors {
+    height: 20px;
+    color: red;
 }
 
 .form {
@@ -93,6 +97,12 @@ button {
 input[type=checkbox] {
     opacity: 0;
     position: absolute;
+}
+
+.delet {
+    width: 20%;
+    background-color: red;
+    color: black;
 }
 
 input[type=checkbox],
